# daynest

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  docker-compose.dev.yml  docker-compose.yml  hacs.json
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: android-release.yml  android-staging.yml  android.yml  backend-ci.yml  codeql.yml  (+13 more)
android/: .editorconfig  .gitignore  README.md  build.gradle.kts  gradle.properties  local.properties.example  settings.gradle.kts
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  20260423_0001_initial_schema.py  20260424_0002_chore_vertical_slice.py  20260424_0003_medication_domain.py  20260424_0004_planned_items_and_calendar.py  20260424_0005_planned_growth_modules.py  20260426_0002_add_routine_every_n_days_check.py  20260501_0001_add_refresh_tokens_table.py  20260516_0001_oidc_auth.py  20260516_0002_medication_scheduled_at_naive.py  20260517_0001_user_timezone.py  20260521_0001_drop_integration_client_scopes.py  20260521_0002_priority_and_tags.py  20260521_0003_rrule.py  20260521_0004_user_settings.py  20260521_0005_calendar_token.py  20260521_0006_recurrence_and_push.py  20260521_0007_notification_sent.py  20260521_0008_push_preferences.py  20260524_0009_planned_item_time_and_duration.py  20260525_0010_recurrence_series.py  20260525_0011_households.py  20260602_0012_shopping_lists.py  20260606_0013_recurring_grocery_auto_add.py  20260606_0014_meal_planning.py  20260606_0016_calendar_feed_token.py  20260607_0015_meal_slot_type_constraint.py
backend/app/: main.py  mcp_server.py
backend/app/api/dependencies/: __init__.py  auth.py  events.py  integration_auth.py  today.py
backend/app/api/routes/: analytics.py  auth.py  bulk.py  calendar.py  health.py  households.py  meal_plans.py  medications.py  push.py  search.py  shopping_lists.py  templates.py  today.py  users.py
backend/app/api/routes/integrations/: clients.py  home_assistant.py  mcp.py
backend/app/core/: config.py  enums.py  observability.py  oidc.py  password.py  tokens.py
backend/app/db/: session.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  chore_instance.py  chore_template.py  household.py  household_member.py  integration_client.py  meal_plan.py  meal_slot.py  medication_dose_instance.py  medication_plan.py  notification_sent.py  planned_item.py  push_subscription.py  recurrence_series.py  refresh_token.py  routine_template.py  shopping_list.py  task_instance.py  user.py
backend/app/repositories/: analytics_repository.py  household_repository.py  meal_plan_repository.py  refresh_token_repository.py  shopping_list_repository.py  today_repository.py
backend/app/schemas/: analytics.py  auth.py  bulk.py  calendar.py  households.py  integration_contracts.py  integrations.py  meal_plan.py  medication.py  push.py  shopping_list.py  templates.py  today.py  users.py
backend/app/services/: event_bus.py  export_import_service.py  meal_plan_service.py  push_service.py  recurrence_service.py  shopping_list_service.py  today_service.py
backend/docs/: OBSERVABILITY.md
backend/docs/integrations/: AUTHENTICATION_STRATEGY.md  COMPATIBILITY_POLICY.md  HOME_ASSISTANT_CONNECTION_GUIDE.md  HOME_ASSISTANT_CUSTOM_INTEGRATION_PLAN.md  LOCAL_MCP_SERVER.md  SCHEMA_CHANGELOG.md
backend/env/: dev.env  prod.env  staging.env
backend/scripts/: check_growth_migrations.py
backend/tests/: conftest.py  test_analytics_api.py  test_auth_routes.py  test_config.py  test_export_import.py  test_growth_migration_check.py  test_households.py  test_integration_adapters.py  test_integration_clients.py  test_integration_contracts.py  test_mcp_server.py  test_meal_plans.py  test_observability.py  test_oidc.py  test_push.py  test_rate_limit.py  test_recurrence_service.py  test_recurring_planned_items.py  test_search.py  test_shopping_lists.py  test_sse.py  test_today_route_integration.py  test_today_service.py  test_users.py
custom_components/: pyproject.toml
dashboard/: package-lock.json  package.json  pnpm-lock.yaml  rollup.config.mjs  tsconfig.json
daynest-home-assistant/: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .templatesyncignore  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPENDENCIES.md  GEMINI.md  LICENSE  README.md  hacs.json  pyproject.toml  release-please-config.json  requirements.txt  requirements_test.txt
deploy/: Caddyfile
docs/: optimization-plan.md
frontend/: .env.example  .env.production  Dockerfile  Dockerfile.dev  README.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
pebble/: .gitignore  README.md  package.json
python-daynest/: pyproject.toml
python-daynest/src/daynest/: __init__.py  client.py  exceptions.py  models.py
python-daynest/tests/: test_client.py  test_package.py
scripts/: bootstrap-secrets.sh  sync-version.sh
tests/: test_client.py  test_const.py  test_init.py
(+523 files in other folders)
