[project]
name = "daynest-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.18.4",
    "anyio==4.14.0",
    "email-validator==2.3.0",
    "fastapi==0.137.2",
    "google-auth==2.54.0",
    "httpx==0.28.1",
    "icalendar==7.1.3",
    "fastmcp==3.4.2",
    "psycopg[binary]==3.3.4",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "cryptography==48.0.1",
    "pyjwt==2.13.0",
    "python-dateutil==2.9.0.post0",
    "pywebpush==2.3.0",
    "sentry-sdk[fastapi]==2.63.0",
    "sse-starlette==3.4.4",
    "sqlalchemy==2.0.51",
    "uvicorn[standard]==0.49.0",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.18",
    "ty==0.0.51",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff.lint]
ignore = ["B008"]  # Depends/Query in FastAPI route defaults is intentional
per-file-ignores = { "__init__.py" = ["F401"] }
