[project]
name = "python-daynest"
version = "0.1.0"
description = "Python client library for the Daynest API"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "aiohttp>=3.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daynest"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.ruff.lint]
per-file-ignores = { "__init__.py" = ["F401"] }
